# py_rational

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
py_rational/: __main__.py  rational.py
tests/: test_rational.py
