[tool.poetry]
name = "py-rational"
version = "0.1.0"
description = "Playing with Python for fun"
authors = ["Chris Dunphy <chris@megaparsec.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_rational"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "==1.10.0"
pytest = "==8.2.0"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
